--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -32,7 +32,6 @@
     grid-column: 1/7;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
     grid-gap: 10px;
   }
 
